--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,14 +12,14 @@
 			<select id ="filters">
 				<option>-- No Filter --</option>
 				<option value="country">Country</option>
-				<option value="cities">Cities</option>
+				<option value="city">Cities</option>
 				<option value="cuisine">Cuisine</option>
 			</select>
 			<select id ="options">
 				<option>-- No Filter --</option>
 			</select>
-			<button type="button" class="btn btn-outline-primary shadow-none" id = "applyBtn">Apply Filter</button>
-			<button type="button" class="btn btn-outline-danger shadow-none" id="clearBtn">Clear Filter</button>
+			<button type="button" class="btn btn-outline-primary shadow-none" id = "applyBtn" disabled>Apply Filter</button>
+			<button type="button" class="btn btn-outline-danger shadow-none" id="clearBtn" disabled>Clear Filter</button>
 		</div>
 			<table style="width:100%" id="mainTable" class="table table-bordered">
 				
