--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 			<select id ="options">
 				<option>-- No Filter --</option>
 			</select>
-			<button type="button" class="btn btn-outline-primary shadow-none" id = "applyBtn" disabled>Apply Filter</button>
+			<button type="button" class="btn btn-outline-primary shadow-none" id = "applyBtn">Apply Filter</button>
 			<button type="button" class="btn btn-outline-danger shadow-none" id="clearBtn" disabled>Clear Filter</button>
 		</div>
 			<table style="width:100%" id="mainTable" class="table table-bordered">
@@ -33,7 +33,7 @@
 				</li>
 				<li class = "page-item">
 					<button class="page-link shadow-none" id="nextButton">Next</button>
-				</li> <!--Remove shadow (shadow:none)-->
+				</li>
 			</ul>
 			<div class = "bottom">
 				<label>Rows To Display:</label>
